--- a/package.json
+++ b/package.json
@@ -9,34 +9,65 @@
   },
   "private": true,
   "dependencies": {
+    "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mapped-types": "^1.2.0",
     "@nestjs/platform-express": "^9.0.0",
+    "cache-manager": "^3.6.0",
+    "cache-manager-redis-store": "^2.0.0",
+    "core-js": "^3.6.5",
+    "http-proxy-middleware": "^2.0.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-is": "18.2.0",
+    "react-masonry-css": "^1.0.16",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.0.0",
+    "regenerator-runtime": "0.13.7",
+    "rxjs": "^7.5.7",
+    "styled-components": "5.3.5",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@nrwl/cli": "14.8.5",
+    "@nrwl/cypress": "15.0.0",
     "@nrwl/eslint-plugin-nx": "14.8.5",
-    "@nrwl/jest": "14.8.5",
+    "@nrwl/jest": "15.0.0",
     "@nrwl/linter": "14.8.5",
     "@nrwl/nest": "14.8.5",
     "@nrwl/node": "14.8.5",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/react": "15.0.0",
+    "@nrwl/web": "15.0.0",
     "@nrwl/workspace": "14.8.5",
+    "@testing-library/react": "13.4.0",
+    "@types/cache-manager": "^4.0.2",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
+    "@types/react": "18.0.20",
+    "@types/react-dom": "18.0.6",
+    "@types/react-is": "17.0.3",
+    "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "babel-jest": "28.1.1",
+    "babel-plugin-styled-components": "1.10.7",
+    "cypress": "^10.7.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.31.8",
+    "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "nx": "14.8.5",
     "prettier": "^2.6.2",
+    "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
